# pgsolver

./: .gitignore  .gitmodules  .project  CHANGELOG.md  CHANGES.md  Config.default  GeneratorList  LICENSE  Makefile  README.md  SatCompile  SolverList  _oasis  _tags  changelog.txt  dune-project  myocamlbuild.ml  oasis.sh  opam-build.sh  opam-local.sh  package.json  pgsolver.opam  setup.ml  todo.txt
.github/workflows/: build-test.yml
doc/: Makefile  benchmarks.tex  changelog.tex  develop.tex  display.tex  gensolv.tex  implalg.tex  implheur.tex  install.tex  intro.tex  license.tex  literature.bib  locglob.tex  main.tex  makros.tex  ntheorem.cfg  pgfgraphics.tex  results.tex  running.tex  specs.tex  tech.tex  tools.tex  univopt.tex  verify.tex
doc/graphics/: examplegame.ps  marcingame.eepic  marcingame.fig  titlegame.ps
opam/: findlib  opam
scripts/: benchfamily.sh  benchrandom.sh  benchrandomfamily.sh  callfamily.sh  clusteredcall.sh  createrandomgames.sh  sqrtpriorandom.sh
scripts/policyitervis/: buildanim.sh  commands.txt  template.tex
src/: META  pgsolver.mldylib  pgsolver.mllib
src/apps/tools/: combine.ml  complexdecomp.ml  compressor.ml  dune  infotool.ml  obfuscator.ml  policyitervis.ml  transformer.ml
src/data/: pgnode.ml  pgnode.mli  pgnodeset.ml  pgnodeset.mli  pgplayer.ml  pgplayer.mli  pgpriority.ml  pgpriority.mli  pgsolution.ml  pgsolution.mli  pgstrategy.ml  pgstrategy.mli
src/generators/: cliquegame.ml  cliquegame_aux.ml  clusteredrandomgame.ml  clusteredrandomgame_aux.ml  elevatorverification.ml  elevatorverification_aux.ml  jurdzinskigame.ml  jurdzinskigame_aux.ml  laddergame.ml  laddergame_aux.ml  langincl.ml  langincl_aux.ml  modelcheckerladder.ml  modelcheckerladder_aux.ml  randomgame.ml  randomgame_aux.ml  recursivedullgame.ml  recursivedullgame_aux.ml  recursiveladder.ml  recursiveladder_aux.ml  steadygame.ml  steadygame_aux.ml  stratimprgen_aux.ml  taskscheduler.ml  towersofhanoi.ml  towersofhanoi_aux.ml
src/lib/: dune
testcases/: failtest1.gm
tests/: solverstest.ml
(+222 files in other folders)
